<resources>
    <string name="app_name">Blood Glucose Companion</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_measurement">Add new measurement</string>
    <string name="deleteYesBtn">Delete It!</string>
    <string name="database_date_time_format">yyyy-MM-dd HH:mm</string>
    <string name="database_date_format">yyyy-MM-dd</string>
    <string name="decimal_format">%.1f</string>
    <string name="pref_defaultCorrectiveDrugID">PREF_CORRECTIVE_DRUG</string>
    <string name="pref_defaultBaselineDrugID">PREF_BASELINE_DRUG</string>
    <string name="pref_defaultMeasurementUnitID">PREF_GLUCOSE_UNITS</string>
    <string name="pref_use_last_as_default">PREF_LAST_ENTRY_DEFAULT</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_file_key">ALL_PREFERENCES</string>
    <string name="export_delimiter">||</string>
    <string name="csv_delimiter">||</string>
    <string name="summary_text">
        <![CDATA[
        Your highest ever blood glucose reading was <b>%.2f %s</b> taken on <b>%s</b>.\n
        Your lowest ever blood glucose reading was <b>%.2f %s</b> taken on <b>%s</b>.\n
        On average you take <b>%.2f</b> units of %s a day to correct your levels.\n
        Your highest readings are usually around <b>%s</b>.\n
        ]]>
    </string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">closed</string>
    <string name="Measurements">Measurements</string>
    <string name="chartsTitle"><b>Charts</b></string>
    <string name="data_management_title"><b>Data Management</b></string>
    <string name="settings_title"><b>User Settings</b></string>
    <string name="title_activity_add_measurementmeasurement_title"><b>Add new measurement</b></string>
    <string name="OK">Got it</string>
    <string name="add_measurement_measurement_hint"><font size="9">Glucose Measurement</font></string>
    <string name="add_measurement_corrective_dose_hint"><font size="9">Corrective Dose (units)</font></string>
    <string name="add_measurement_baseline_amount_hint"><font size="9">Baseline Dose (units)</font></string>
    <string name="add_measurement_notes_hint"><font size="9">Notes</font></string>
    <string-array name="csv_delimiters">
        <item>|</item>
        <item>||</item>
        <item>~</item>
        <item>#</item>
        <item>!</item>
        <item>,</item>
        <item>^</item>
        <item>=</item>
        <item>$</item>
        <item>%</item>
        <item>&amp;</item>
        <item>:</item>
        <item>;</item>
        <item>{</item>
        <item>}</item>
        <item>[</item>
        <item>]</item>
        <item>(</item>
        <item>)</item>
    </string-array>
</resources>
