<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_add_measurement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.Toolbar>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"

                android:layout_marginLeft="60dp"
                android:text="@string/title_activity_add_measurementmeasurement_title"
                android:textColor="@color/colorText"
                android:textSize="@dimen/title_size" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="When:"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/addMeasurementTimeLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="2018-05-15 20:52:45"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="Measurement Amount:"
                    android:textAlignment="viewStart" />

                <EditText
                    android:id="@+id/addMeasurementGlucoseAmountTB"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.7"
                    android:focusedByDefault="true"
                    android:hint="@string/add_measurement_measurement_hint"

                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true" />

                <Spinner
                    android:id="@+id/measurementUnitsDropDown"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.2"
                    android:spinnerMode="dialog"
                    android:theme="@style/SpinnerStyle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="Corrective Dose Amount:" />

                <EditText
                    android:id="@+id/addMeasurementCorrectiveDoseAmountTB"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"


                    android:layout_weight="2.7"
                    android:hint="@string/add_measurement_corrective_dose_hint"
                    android:inputType="number" />

                <Spinner
                    android:id="@+id/correctiveDoseDrugDropdown"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.2"
                    android:theme="@style/SpinnerStyle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="Baseline Dose Amount:" />

                <EditText
                    android:id="@+id/addMeasurementBaselineDrugAmountTB"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.7"
                    android:ems="10"
                    android:hint="@string/add_measurement_baseline_amount_hint"
                    android:inputType="number" />

                <Spinner
                    android:id="@+id/baselineDoseDrugDropdown"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.2"
                    android:theme="@style/SpinnerStyle" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:text="Notes:" />

                <EditText
                    android:id="@+id/addMeasurementNotesTB"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:ems="10"
                    android:hint="@string/add_measurement_notes_hint"
                    android:inputType="textMultiLine"
                    android:maxLength="300" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/addMeasuremeanCancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:text="Cancel" />

                <Button
                    android:id="@+id/addMeasurementsaveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:background="@color/colorSecondary"
                    android:text="Save" />

            </TableRow>

        </TableLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>




